--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,3 +57,15 @@ code {
 .content .by {
   font-weight: bold;
 }
+
+li {
+  padding: 2px;
+  list-style: none;
+
+}
+
+#tweeter {
+  color: blue;
+  font-size: 16px;
+  font-weight: bold;
+}
